# numba-cuda

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .spdx-ignore  CLA.md  CMakeLists.txt  CONTRIBUTING.md  GREEN_CONTEXT_SUPPORT.md  LAUNCH-CONFIG-CODEX-PROMPT.md  LAUNCH-CONFIG-TODO.md  LAUNCH-CONFIG.md  LICENSE  README.md  conftest.py  errorlog  greptile.json  pixi.toml  prof.py  pyproject.toml  pytest.ini  recipe.yml  replace_checks.py  setup.py  update.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature-request.md  submit-question.md
.github/actions/compute-matrix/: action.yaml
.github/actions/fetch_ctk/: action.yml
.github/actions/get_pr_number/: action.yml
.github/actions/install_unix_deps/: action.yml
.github/actions/sccache-summary/: action.yml
.github/workflows/: build-sdist.yml  build-wheel.yml  build.yaml  checks.yaml  ci-new.yaml  ci.yaml  conda-python-build.yaml  conda-python-simulator.yaml  conda-python-tests.yaml  docs-build.yaml  pr.yaml  publish.yaml  simulator-test.yaml  status-check.yml  test-wheel-linux.yml  test-wheel-windows.yml  wheel-windows-build.yaml  wheel-windows-tests.yaml  wheels-build.yaml  wheels-test.yaml
ci/: build_conda.sh  build_docs.sh  build_tests.sh  build_wheel.ps1  build_wheel.sh  check_style.sh  common_variables.sh  coverage_report.sh  get_test_binary_dir.py  matrix.yml  test-matrix.json  test-matrix.yml  test_conda.sh  test_conda_ctypes_binding.sh  test_conda_nvidia_binding.sh  test_conda_pynvjitlink.sh  test_cudf.sh  test_simulator.sh  test_thirdparty.sh  test_thirdparty_awkward.sh  test_thirdparty_cudf.sh  test_thirdparty_nvmath.sh  test_wheel.ps1  test_wheel.sh  test_wheel_ctypes_binding.sh  test_wheel_deps_wheels.sh  test_wheel_nvidia_binding.sh  test_wheel_pynvjitlink.sh  upload_conda.sh  versions.yml
ci/patches/: cudf_numba_cuda_compatibility.patch
ci/release/: update-version.sh
ci/tools/: download-wheels  env-vars  install_gpu_driver.ps1  lookup-run-id  run-tests
conda/recipes/numba-cuda/: meta.yaml
conda/recipes/numba_cuda/: meta.yaml
configs/: cuda_bf16.yml  cuda_fp16.yml  cuda_fp8.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/developer/: free_threading.rst  index.rst
docs/source/reference/: cache_hints.rst  envvars.rst  host.rst  index.rst  kernel.rst  libdevice.rst  memory.rst  types.rst
docs/source/user/: bindings.rst  caching.rst  callconv.rst  cooperative_groups.rst  cuda_array_interface.rst  cuda_compilation.rst  cuda_ffi.rst  cudapysupported.rst  debugging.rst  device-functions.rst  device-management.rst  examples.rst  external-memory.rst  faq.rst  fastmath.rst  globals.rst  index.rst  installation.rst  intrinsics.rst  ipc.rst  kernels.rst  memory.rst  minor_version_compatibility.rst  overview.rst  random.rst  reduction.rst  simulator.rst  ufunc.rst
examples/debugging/: hello.py
misc/: gdb_print_extension.py
numba/cuda/tests/: __init__.py  test_array_manipulation.py  test_casting.py  test_conditions_as_predicates.py
numba_cuda/: VERSION  __init__.py  _version.py
numba_cuda/cext/: _devicearray.cpp  _dispatcher.cpp  _hashtable.cpp  mviewbuf.c  typeconv.cpp
numba_cuda/configs/: cuda_bf16.yml
numba_cuda/numba/cuda/: __init__.py  _api.py  _compat.py  api.py  api_util.py  args.py  bf16.py  cache_hints.py  cg.py  cgutils.py  cloudpickle.py  codegen.py  compiler.py  cuda_bf16.h  cuda_bf16.py  cuda_fp16.h  cuda_paths.py  cudadecl.py  cudaimpl.py  cudamath.py  datamodel.py  debuginfo.py  decorators.py  descriptor.py  device_init.py  deviceufunc.py  dispatcher.py  errors.py  ext_types.py  extending.py  flags.py  fp16.py  fp8.py  initialize.py  intrinsic_wrapper.py  intrinsics.py  itanium_mangler.py  launchconfig.py  libdevice.py  libdevicedecl.py  (+20 more)
numba_cuda/numba/cuda/_dispatcher/: _dispatcher.cpp  _typeof.cpp
numba_cuda/numba/cuda/_internal/: cuda_bf16.py  cuda_fp16.py  cuda_fp8.py
numba_cuda/numba/cuda/cext/: __init__.py  (+15 more)
numba_cuda_tests/: test_extending.py
numba_cuda_tests/core/: test_serialize.py
numba_cuda_tests/cudadrv/: test_cuda_memory.py  test_cuda_ndarray.py  test_deallocations.py  test_detect.py  test_emm_plugins.py  test_managed_alloc.py  test_ptds.py
numba_cuda_tests/cudapy/: __init__.py  cache_with_cpu_usecases.py  cg_cache_usecases.py  extensions_usecases.py  test_bfloat16.py  test_cffi.py  test_complex.py  test_cooperative_groups.py  test_cuda_array_interface.py  test_cuda_jit_no_types.py  test_debug.py  test_debuginfo.py  test_device_func.py  test_enums.py  test_optimization.py  test_recursion.py  test_serialize.py  test_sm.py  test_ufuncs.py  test_vectorize_decor.py  test_warning.py
numba_cuda_tests/cudasim/: test_cudasim_issues.py
numba_cuda_tests/doc_examples/: test_cpointer.py  test_cpu_gpu_compat.py  test_ffi.py  test_laplace.py  test_montecarlo.py
numba_cuda_tests/nocuda/: test_import.py
numba_cuda_tests/nrt/: test_nrt.py  test_nrt_refct.py
scratch/: cudacore.py  multithreads.py  test.cu  test.cubin  test_cubin.py
scripts/: bench-against.py  bench-launch-overhead.py  plot-launch-overhead.py
test_binary_generation/: pytest.ini
testing/: Makefile  generate_raw_ltoir.py  nrt_extern.cu  pytest.ini  test_cache_version.py
tests/: test_extending.py
tests/core/: test_serialize.py
tests/cudadrv/: __init__.py  test_inline_ptx.py  test_linker.py  test_nvvm_driver.py
tests/cudapy/: cache_with_cpu_usecases.py  cg_cache_usecases.py  test_boolean.py  test_caching.py  test_complex.py  test_dispatcher.py  test_enums.py  test_forall.py  test_freevar.py  test_globals.py  test_gufunc.py  test_inspect.py  test_intrinsics.py  test_ipc.py  test_iterators.py  test_lineinfo.py  test_mandel.py  test_powi.py  test_recursion.py  test_ssa.py  test_transpose.py
tests/cudasim/: test_cudasim_issues.py
tests/doc_examples/: test_ffi.py  test_matmul.py  test_reduction.py  test_sessionize.py  test_ufunc.py  test_vecadd.py
tests/doc_examples/ffi/: saxpy.cu
toolshed/: check_spdx.py
(+496 files in other folders)
