# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "numpy",
]

[project]
name = "numba-cuda"
dynamic = ["version"]
description = "CUDA target for Numba"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Anaconda Inc." },
    { name = "NVIDIA Corporation" }
]
license = "BSD-2-clause"
license-files = ["LICENSE", "LICENSE.numba"]
requires-python = ">=3.9"
dependencies = ["numba>=0.60.0", "cuda-bindings>=12.9.1,<14.0.0", "cuda-core>=0.3.2,<0.4.0dev0"]

[project.optional-dependencies]
cu12 = [
    "cuda-bindings>=12.9.1,<13.0.0",
    "cuda-core==0.3.*",
    "cuda-python==12.9.*",  # supports all CTK 12.x
    "nvidia-cuda-nvcc-cu12",  # for libNVVM
    "nvidia-cuda-runtime-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-cuda-cccl-cu12",
]
# TODO: Use cuda-toolkit package dependencies - e.g. cuda-toolkit[curand,nvvm,nvrtc]=13.*
cu13 = [
    "cuda-bindings==13.*",
    "cuda-core==0.3.2,<0.4.0dev0",
    "cuda-python==13.*",
    "nvidia-nvvm==13.*",
    "nvidia-cuda-runtime==13.*",
    "nvidia-cuda-nvrtc==13.*",
    "nvidia-nvjitlink==13.*",
    "nvidia-cuda-cccl==13.*",
]

[dependency-groups]
test = [
    "pre-commit",
    "psutil",
    "cffi",
    "pytest",
    "pytest-xdist",
    "filecheck",
    "ml_dtypes",
]
test-cu12 = [
    "nvidia-curand-cu12",
    { include-group = "test" }
]
test-cu13 = [
    "nvidia-curand==10.4.*",
    { include-group = "test" }
]

[project.urls]
Homepage = "https://nvidia.github.io/numba-cuda/"
Documentation = "https://nvidia.github.io/numba-cuda/"
Repository = "https://github.com/NVIDIA/numba-cuda"
License = "https://github.com/NVIDIA/numba-cuda/blob/main/LICENSE"
Issues = "https://github.com/NVIDIA/numba-cuda/issues"

[tool.setuptools.dynamic]
version = {attr = "numba_cuda.__version__"}

[tool.setuptools.packages.find]
include = ["numba_cuda*"]

[tool.setuptools.package-data]
"*" = ["*.cu", "*.h", "*.hpp", "*.ptx", "*.cuh", "VERSION", "Makefile"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.pycodestyle]
max-doc-length = 80
max-line-length = 80

[tool.ruff.lint]
ignore = [
    # Extra space in brackets
    "E20",
    # Multiple spaces around ","
    "E231",
    "E241",
    # Comments
    "E26",
    # Assigning lambda expression
    "E731",
    # Ambiguous variable names
    "E741",
]
fixable = ["ALL"]

exclude = [
    "__pycache__",
    ".git",
    "*.pyc",
    "*~",
    "*.o",
    "*.so",
    "*.cpp",
    "*.c",
    "*.h",
    "cuda_bf16.py",
    "cuda_fp16.py",
]

[tool.ruff.lint.per-file-ignores]
# Slightly long line in the standard version file
"numba_cuda/_version.py" = ["E501"]
# "Unused" imports / potentially undefined names in init files
"numba_cuda/numba/cuda/__init__.py" = ["F401", "F403", "F405", "E402"]
"numba_cuda/numba/cuda/simulator/__init__.py" = ["F401", "F403"]
"numba_cuda/numba/cuda/simulator/cudadrv/__init__.py" = ["F401"]
# Ignore star imports", " unused imports", " and "may be defined by star imports"
# errors in device_init because its purpose is to bring together a lot of
# the public API to be star-imported in numba.cuda.__init__
"numba_cuda/numba/cuda/device_init.py" = ["F401", "F403", "F405"]
# libdevice.py is an autogenerated file containing stubs for all the device
# functions. Some of the lines in docstrings are a little over-long", " as they
# contain the URLs of the reference pages in the online libdevice
# documentation.
"numba_cuda/numba/cuda/libdevice.py" = ["E501"]
# Ignore too-long lines in the doc examples", " prioritising readability
# in the docs over line length in the example source (especially given that
# the test code is already indented by 8 spaces)
"numba_cuda/numba/cuda/tests/doc_examples/test_random.py" = ["E501"]
"numba_cuda/numba/cuda/tests/doc_examples/test_cg.py" = ["E501"]
"numba_cuda/numba/cuda/tests/doc_examples/test_matmul.py" = ["E501"]
"numba_cuda/numba/tests/doc_examples/test_interval_example.py" = ["E501"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
numba-cuda = { path = ".", editable = true }

[tool.pixi.environments]
cu12 = { features = ["cu12", "test"], solve-group = "cu12" }
cu13 = { features = ["cu13", "test"], solve-group = "cu13" }

[tool.pyrefly]
search-path = ["./numba_cuda"]

[tool.pytest.ini_options]
minversion = "8.0"
consider_namespace_packages = true
addopts = "--dist loadscope"
