# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "numpy"]

[project]
name = "numba-cuda"
dynamic = ["version"]
description = "CUDA target for Numba"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Anaconda Inc." }, { name = "NVIDIA Corporation" }]
license = "BSD-2-Clause"
license-files = ["LICENSE", "LICENSE.numba"]
requires-python = ">=3.9"
dependencies = [
    "numba>=0.60.0",
    "cuda-bindings>=12.9.1,<14.0.0",
    "cuda-core>=0.5.1,<1.0.0",
    "packaging",
]

[project.optional-dependencies]
cu12 = [
    "cuda-bindings>=12.9.1,<13.0.0",
    "cuda-pathfinder>=1.4.0,<2.0.0",
    # install nvcc for libNVVM
    "cuda-toolkit[cudart,nvcc,nvrtc,nvjitlink,cccl]==12.*",
]
cu13 = [
    "cuda-bindings==13.*",
    "cuda-pathfinder>=1.4.0,<2.0.0",
    "cuda-toolkit[cudart,nvvm,nvrtc,nvjitlink,cccl]==13.*",
]

[dependency-groups]
test = [
    "pre-commit",
    "psutil",
    "cffi",
    "pytest>=8,<9",
    "pytest-xdist",
    "pytest-benchmark",
    "filecheck",
    "ml_dtypes",
    "statistics",
]
test-cu12 = ["cuda-toolkit[curand]==12.*", { include-group = "test" }]
test-cu13 = ["cuda-toolkit[curand]==13.*", { include-group = "test" }]

[project.urls]
Homepage = "https://nvidia.github.io/numba-cuda/"
Documentation = "https://nvidia.github.io/numba-cuda/"
Repository = "https://github.com/NVIDIA/numba-cuda"
License = "https://github.com/NVIDIA/numba-cuda/blob/main/LICENSE"
Issues = "https://github.com/NVIDIA/numba-cuda/issues"

[tool.setuptools.dynamic]
version = { attr = "numba_cuda.__version__" }

[tool.setuptools.packages.find]
include = ["numba_cuda*"]

[tool.setuptools.package-data]
"*" = ["*.cu", "*.h", "*.hpp", "*.ptx", "*.cuh", "VERSION", "Makefile"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.pycodestyle]
max-doc-length = 80
max-line-length = 80

[tool.ruff.lint]
ignore = [
    # Extra space in brackets
    "E20",
    # Multiple spaces around ","
    "E231",
    "E241",
    # Comments
    "E26",
    # Assigning lambda expression
    "E731",
    # Ambiguous variable names
    "E741",
    "B028",
    "B904",
    "B905",
    "B019",
]
select = ["B"]
extend-select = ["PERF"]
fixable = ["ALL"]

exclude = [
    "__pycache__",
    ".git",
    "*.pyc",
    "*~",
    "*.o",
    "*.so",
    "*.cpp",
    "*.c",
    "*.h",
    "cuda_bf16.py",
    "cuda_fp16.py",
    "cuda_fp8.py",
]

[tool.ruff.lint.per-file-ignores]
# Slightly long line in the standard version file
"**/test*.py" = ["PERF", "B007", "B018", "B023"]
"**/simulator/*" = ["PERF"]
"numba_cuda/_version.py" = ["E501"]
# "Unused" imports / potentially undefined names in init files
"numba_cuda/numba/cuda/__init__.py" = ["F401", "F403", "F405", "E402"]
"numba_cuda/numba/cuda/simulator/__init__.py" = ["F401", "F403"]
"numba_cuda/numba/cuda/simulator/cudadrv/__init__.py" = ["F401"]
# Ignore star imports", " unused imports", " and "may be defined by star imports"
# errors in device_init because its purpose is to bring together a lot of
# the public API to be star-imported in numba.cuda.__init__
"numba_cuda/numba/cuda/device_init.py" = ["F401", "F403", "F405"]
# Ignore star imports", " unused imports", " and "may be defined by star imports"
# errors in types init files.
"numba_cuda/numba/cuda/types/__init__.py" = ["F401", "F403", "F405"]
"numba_cuda/numba/cuda/types/__init__.pyi" = ["F401", "F403", "F405"]
# Ignore "unused" imports in datamodel init file.
"numba_cuda/numba/cuda/datamodel/__init__.py" = ["F401"]
# libdevice.py is an autogenerated file containing stubs for all the device
# functions. Some of the lines in docstrings are a little over-long", " as they
# contain the URLs of the reference pages in the online libdevice
# documentation.
"numba_cuda/numba/cuda/libdevice.py" = ["E501"]
# Ignore too-long lines in the doc examples", " prioritising readability
# in the docs over line length in the example source (especially given that
# the test code is already indented by 8 spaces)
"numba_cuda/numba/cuda/tests/doc_examples/test_random.py" = ["E501"]
"numba_cuda/numba/cuda/tests/doc_examples/test_cg.py" = ["E501"]
"numba_cuda/numba/cuda/tests/doc_examples/test_matmul.py" = ["E501"]
"numba_cuda/numba/tests/doc_examples/test_interval_example.py" = ["E501"]

[tool.pyrefly]
search-path = ["./numba_cuda"]

[tool.cibuildwheel]
skip = "*-musllinux_*"
enable = "cpython-freethreading"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = "native"
before-build = "pip install twine"
repair-wheel-command = [
    "auditwheel repair -w {dest_dir} {wheel}",
    "twine check --strict {dest_dir}/*",
]

[tool.cibuildwheel.windows]
archs = "AMD64"
before-build = "pip install delvewheel twine"
repair-wheel-command = [
    "delvewheel repair --custom-patch -w {dest_dir} {wheel}",
    "twine check --strict {dest_dir}/*",
]
